syntax = "proto3";

option csharp_namespace = "ChatGrpc";

message ChatMessage {
    string from = 1;
    string msg = 2;
    string time = 3;
}

message User {
    string id = 1;
    string name = 2;
}

message Empty {}

message UserList {
    repeated User users = 1;
}

message JoinResponse {
    int32 error = 1;
    string msg = 2;
}

message ReceiveMsgRequest {
    string user = 1;
}

service ChatService {
    rpc Join(User) returns (JoinResponse) {}
    rpc SendMsg(ChatMessage) returns (Empty) {}
    rpc ReceiveMsg(Empty) returns (stream ChatMessage) {}
    rpc GetAllUsers(Empty) returns (UserList) {}
}